# encryptor

./: .editorconfig  .gitignore  .pylintrc  LICENSE  README.md  mypy.ini  pyproject.toml
encryptor/: __init__.py  __main__.py  app.py  constants.py
encryptor/assets/: decrypted_message.txt  encrypted_message.txt  receive_private.pem  receive_public.pem  send_private.pem  send_public.pem
encryptor/encryption/: crypto.py  keys.py  message.py  mode.py
encryptor/network/: client_thread.py  connection.py  exceptions.py  frames.py  message.py  message_header.py  server_thread.py  workers.py
encryptor/receive/: receiver.py
encryptor/send/: sender.py
encryptor/utils/: json.py  serializable_enum.py
encryptor/widgets/: auth_dialogs.py  dialogs.py  menu_bar.py  messages_list.py  send_box.py  status_bar.py
private/: privkey.pem
public/: pubkey.pem
