[tool.poetry]
name = 'encryptor'
version = '0.1.0'
description = 'A simple application to encrypt and send data over the network'
license = 'ISC'
authors = [
  'Bartosz Jankowski <brt.jankowski@gmail.com>',
  'Szymon Gebler <gebler.szymon@gmail.com>'
]
readme = 'README.md'
homepage = 'https://github.com/gebsh/encryptor'
repository = 'https://github.com/gebsh/encryptor'

[tool.poetry.dependencies]
python = '^3.8'
PyQt5 = '^5.14.2'

[tool.poetry.dev-dependencies]
black = '^19.10b0'
pylint = '^2.5.0'

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'
